Project Name added

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form action="/add" method="POST">
-        <h1>Money Tracker WebApp</h1>
+        <h1>FinTrack : Money Tracker WebApp</h1>
         <div class="input-section">
             <label for="category_select">Category: </label>
             <select id="category_select" name="category_select">
